kube-deploy/deployment.yaml
# Create persistence claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-pabreu
  namespace: egs1
spec:
  selector:
    matchLabels:
      app: mysql-pabreu
  template:
    metadata:
      labels:
        app: mysql-pabreu
    spec:
      containers:
      - name: mysql
        image: registry.deti:5000/mysql-pabreu:14062022
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: webapp-pvc-claim

# Create app deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-pabreu
  namespace: egs1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-pabreu
  template:
    metadata:
      labels:
        app: app-pabreu
    spec:
      containers:
      - name: app
        image: registry.deti:5000/app-pabreu:v4
        ports:
          - containerPort: 8000

# Create nginx deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pabreu
  namespace: egs1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-pabreu
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx-pabreu
    spec:
      containers:
        - image: registry.deti:5000/nginx-pabreu:v4
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always

# Creat database service
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service-pabreu
  namespace: egs1
spec:
  ports:
  - port: 3306
    protocol: TCP
    name: mysql-service-pabreu
  selector:
    app: mysql-pabreu
  type: NodePort

# Create app service
---
apiVersion: v1
kind: Service
metadata:
  name: app-service-pabreu
  namespace: egs1
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: app-pabreu

# Create nginx service
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-pabreu
  namespace: egs1
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-pabreu
# Configure Traefik ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-k3s
  namespace: egs1
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: billsdivider.egs
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-pabreu
            port: 
              number: 80
